# name-generator

./: .env  .env-sample  .env.example  .gitignore  README.md  docker-compose.override.yaml  docker-compose.yaml
.github/workflows/: ci.yml
apps/api/: Dockerfile  README.md  migrate.sh  pyproject.toml
apps/api/collections/Domain Generator/: Domain Status.bru  Domain Suggestion Stream.bru  Domain Suggestion.bru  Domain Variants Stream.bru  Domain Variants.bru  Favorite Create.bru  Favorite Get.bru  Health.bru  Metrics History.bru  Metrics Queue.bru  Metrics Summary.bru  Metrics Workers.bru  Rating Create.bru  Rating Get.bru  Top Domains.bru  bruno.json  collection.bru
apps/api/collections/Domain Generator/Prod/: Domain Status.bru  Domain Variants Stream.bru  Health.bru  folder.bru
apps/api/migrations/models/: 0_20251024133817_init.py  1_20251030144251_change_user_id_to_text.py  2_20251103172901_add_favorites_table.py  3_20251110222538_update_variants_check_to_groq_model.py  4_20251208_add_worker_timing.py  5_20251208_add_queue_depth_metrics.py  6_20260715_add_model_routing_metrics.py  7_20260715_add_per_call_model_metrics.py  8_20260715_backfill_single_call_model_metrics.py
apps/api/scripts/: benchmark_model_cutover.py  generate_jwt.py
apps/api/src/api/: __init__.py  config.py  exceptions.py  main.py  provider_metrics.py  quotas.py  security.py  sse.py  utils.py
apps/api/src/api/models/: api_models.py  db_models.py
apps/api/src/api/routes/: domain.py  health.py  metrics.py  user.py
apps/api/src/api/services/old/: queue.py
apps/api/src/api/suggestor/: base.py  groq.py  prompts.py  tlds.py
apps/api/src/app/models/: db_models.py
apps/api/tests/: test_business_baseline.py  test_creative_e2e.py  test_deployment_contract.py  test_docker_fresh_bootstrap.py  test_frontend_metrics_contract.py  test_groq_config.py  test_groq_contract.py  test_groq_suggestor.py  test_model_metrics.py  test_postgres_upgrade_integration.py  test_quotas.py  test_security_baseline.py
apps/name_suggestor/: Dockerfile  README.md
apps/name_suggestor/src/name_suggestor/: main.py  models.py
apps/name_suggestor/tests/: test_main.py
apps/web/: .dockerignore  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  tailwind.config.ts
apps/web/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/app/api/token/: route.ts
apps/web/app/dashboard/: page.tsx
apps/web/app/design/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/profile/: page.tsx
apps/web/app/top-domains/: page.tsx
apps/web/components/: Footer.tsx  Header.tsx  Hero.tsx  HeroBackground.tsx  Icons.tsx  page-layout.tsx  providers.tsx
apps/web/components/DomainGenerator/: DomainGenerator.tsx  DomainRow.tsx  DomainRowDropdown.tsx  DomainSection.tsx  index.ts
apps/web/components/magicui/: client-tweet-card.tsx  tweet-card.tsx
apps/web/components/ui/: button.tsx  card.tsx  client-tweet-card.tsx  collapsible.tsx  faq.tsx  flip-words.tsx  input-group.tsx  navigation-menu.tsx  sonner.tsx  table.tsx  tweet-card.tsx  typewriter.tsx
apps/web/lib/: api-client.ts  auth-client.ts  auth.ts  marketing.ts  types.ts  utils.ts
apps/web/scripts/: seed_better_auth.sh
apps/web/tests/e2e/: baseline.spec.ts  creative-model.spec.ts
apps/worker/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/worker/src/domain_checker/: __init__.py  db_models.py  logic.py  main.py  main_old.py
apps/worker/tests/: test_main.py
backend/: .env  Dockerfile  README.md  pyproject.toml
backend/src/backend/: domain_check.py  groq_client.py  jobs.py  main.py  models.py  utils.py  worker.py
docs/model-cutover/: tw-228-2026-07-15.md  tw-228-runbook.md
domain_checker/: Dockerfile  README.md  pyproject.toml
domain_checker/src/: main.py  utils.py
domain_checker/src/domain_checker/: main.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: actions.ts  globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/top-domains/: page.tsx
frontend/components/: Footer.tsx  Header.tsx
frontend/components/magicui/: tweet-card.tsx
frontend/components/ui/: Fancy-Underline-Center.tsx  button-colorful.tsx  faq.tsx  flip-words.tsx
frontend/lib/: utils.ts
infra/: docker-compose.yaml
monitoring/: model-alerts.yaml
name_suggestor/: Dockerfile  README.md  pyproject.toml
name_suggestor/src/name_suggestor/: main.py
tests/contracts/: domain_names.json
