[tool.poetry]
name = "domain_checker"
version = "0.1.0"
description = "A service to check domain availability."
authors = ["Timo Weiss <timo.weiss@protonmail.ch>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
requests = "^2.32.3"
pydantic = "^2.10.4"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.core.masonry.api"