[tool.poetry]
name = "api"
version = "0.1.0"
description = "API service for the domain checker."
authors = ["Timo Weiss <timo.weiss@protonmail.ch>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
requests = "^2.32.3"
pydantic = "^2.10.4"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
tldextract = "^5.1.3"
groq = "^0.13.1"
redis = "^6.4.0"
rq = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.core.masonry.api"